--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -73,6 +73,7 @@
                         {{order .name|link_to: 'order.customer_url '}}
                         
                         </h3>
+                        <p>{{ order.financial_status_label }}</p>
                 </div>
                 </div>
               {% endfor %}
