--- a/sections/template-order.liquid
+++ b/sections/template-order.liquid
@@ -1,1 +1,10 @@
-hello
+<div class="max-w-6xl mx-auto px-4 py-12">
+    <div class="flex items-start md:items-end justify-between my-5">
+        <div class="w-1/2">
+            <h1 class="text-2xl font-bold text-gray-700">Order {{ order.name }}</h1>
+            <p class="text-gray-500 my-2">Placed on {{ order.created_at | date: format: 'date' }}</p>
+            <span class="text-sm text-white bg-gray-700 rounded-full my-2 py-1 px-4">{{ order.financial_status_label }}</span>
+        </div>
+        <a href="{{ routes.account_url }}" class="text-blue-700 hover:text-blue-900 underline font-medium">Back to Accounts</a>
+    </div>
+</div>
