--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -102,7 +102,7 @@
                   <div class="order-Customer_url">
                     <div>
                       <h3>
-                        {{ order.name | link_to: 'order.customer_url ' }}
+                        {{ order.name | link_to: 'template-customer-order ' }}
                       </h3>
                       <p>{{ order.financial_status_label }}</p>
                     </div>
@@ -136,7 +136,7 @@
 
 
 
-
+{% comment %}   {{ order.name | link_to: 'order.customer_url ' }} {% endcomment %}
 
 
 
