--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -102,7 +102,8 @@
                   <div class="order-Customer_url">
                     <div>
                       <h3>
-                        {{ order.name | link_to: 'template-customer-order ' }}
+                        {{ order.name | link_to: 'order.customer_url ' }} 
+                        {% comment %} {{ order.name | link_to: 'template-customer-order.customer_url  ' }} {% endcomment %}
                       </h3>
                       <p>{{ order.financial_status_label }}</p>
                     </div>
