--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -1,1 +1,10 @@
-<h1>Address </h1>
+<div class="address-section">
+<div class="addresss-container">
+<div class="address-content">
+<div class="add-heading">
+    <h1 class="h1-heading">Address </h1>
+    <button class="create-new-address-btn" type="button">Create new Address </button>
+</div>
+</div>
+</div>
+</div>
