--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -4,6 +4,7 @@
 <div class="add-heading">
     <h1 class="h1-heading">Address </h1>
     <button class="create-new-address-btn" type="button">Create new Address </button>
+    <a href="{{ routes.account_url }}" class="back-to-url"> Back to Account</a>
 </div>
 </div>
 </div>
