--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -16,6 +16,11 @@
                             <span class="default-class">Default</span>
                             {% endif %}
                             <div class="address-format">{{ address | format_address }}</div>
+
+                            <div class="btns">
+                            <button class="edit_btn">Edit</button>
+                            <button class="delete_btn">Delete</button>
+                            </div>
                         </div>
                     </div>
                     {% endfor %}
